# Signals-Slots

./: .gitignore  README.md
SignalsAndSlots_Section2/: CMakeLists.txt  main.cpp  receiver.cpp  receiver.h  sender.cpp  sender.h
SignalsAndSlots_Section3/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
SignalsAndSlots_Section4/: CMakeLists.txt  main.cpp  myclass.cpp  myclass.h
SignalsAndSlots_Section6/: CMakeLists.txt  Main.qml  main.cpp
